--- a/httpzoid/build.gradle
+++ b/httpzoid/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "wiklosoft.mediaprovider"
         minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
@@ -21,10 +20,5 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:23.0.1'
-    compile('com.wu-man:android-oauth-client:0.0.3') {
-        exclude module: 'support-v4'
-    }
-    compile 'com.google.android.gms:play-services-drive:8.1.0'
-    compile project(':httpzoid')
+    compile files('libs/gson-2.2.4.jar')
 }
